# genel

./: .antigravityrc  .env.example  .gitignore  ANTIGRAVITY_SETUP.md  CLAUDE.md  OPENROUTER_SETUP.md  README.md  README_CLI.md  README_CONTROL_PANEL.md  VSCODE_SETUP.md  WORKSPACE.md  ai_cli.py  ai_control_panel.py  api.txt  deepseek.bat  gemini.bat  geneL  genel.code-workspace  koray.bat  menu.bat  package-lock.json  package.json  requirements.txt  setup_env.ps1  setup_env.sh  tasks.txt  umit.bat
hotel/backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  seed.py  seed_full.py
hotel/backend/app/: main.py
hotel/backend/app/contexts/: __init__.py
hotel/backend/app/core/: audit.py  auth.py  config.py  db.py  event_handlers.py  events.py  observability.py  rbac.py
hotel/backend/app/models/: __init__.py  ai_invocation.py  audit.py  base.py  blockchain_identity.py  budget.py  chain.py  channel.py  channel_mapping.py  channel_sync_log.py  chart_of_accounts.py  chat_message.py  chat_session.py  complaint.py  crm.py  custom_report.py  cv.py  einvoice.py  feedback.py  finance.py  fnb.py  front_office.py  gds.py  groups.py  guest_wifi_session.py  housekeeping.py  hr.py  integration_setting.py  iot.py  ledger_entry.py  loyalty_account.py  loyalty_transaction.py  (+10 more)
hotel/backend/migrations/: env.py
hotel/backend/tests/: conftest.py  test_ai_core.py  test_auth.py  test_channels.py  test_faz2_agents.py  test_faz2_all_services.py  test_faz2_services.py  test_ws.py
(+402 files in other folders)
